[package]
name = "dyn-proxy"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.6"
hyper = { version="0.14.13", features = ["full" ]}
tokio = { version="1.12.0", features = ["full" ]}
bytes = "1"
async-trait = "0.1.51"
